{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 62,
  "lineage": "3c31be91-86e9-40ac-87d0-accf8d4e7cb5",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "my_terraform_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ddaab660-45e8-4059-b8ca-30e1678cb880/resourceGroups/rg-ace-stallion/providers/Microsoft.Network/networkInterfaces/myNIC",
            "internal_domain_name_suffix": "jvud05lybxmebifdhqh3sntqra.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "my_nic_configuration",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ddaab660-45e8-4059-b8ca-30e1678cb880/resourceGroups/rg-ace-stallion/providers/Microsoft.Network/publicIPAddresses/myPublicIP",
                "subnet_id": "/subscriptions/ddaab660-45e8-4059-b8ca-30e1678cb880/resourceGroups/rg-ace-stallion/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-25-24-B0",
            "name": "myNIC",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-ace-stallion",
            "virtual_machine_id": "/subscriptions/ddaab660-45e8-4059-b8ca-30e1678cb880/resourceGroups/rg-ace-stallion/providers/Microsoft.Compute/virtualMachines/myVM"
          },
          "dependencies": [
            "azurerm_public_ip.my_terraform_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.my_terraform_subnet",
            "azurerm_virtual_network.my_terraform_network",
            "random_pet.rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "my_terraform_nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ddaab660-45e8-4059-b8ca-30e1678cb880/resourceGroups/rg1_name/providers/Microsoft.Network/networkInterfaces/myNIC1",
            "internal_domain_name_suffix": "qeodgyw21ijevfcb3hkjbrwl2a.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "my_nic_configuration1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ddaab660-45e8-4059-b8ca-30e1678cb880/resourceGroups/rg1_name/providers/Microsoft.Network/publicIPAddresses/myPublicIP1",
                "subnet_id": "/subscriptions/ddaab660-45e8-4059-b8ca-30e1678cb880/resourceGroups/rg1_name/providers/Microsoft.Network/virtualNetworks/myVnet1/subnets/mySubnet1"
              }
            ],
            "location": "eastus",
            "name": "myNIC1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg1_name"
          },
          "dependencies": [
            "azurerm_public_ip.my_terraform_public_ip1",
            "azurerm_resource_group.rg1",
            "azurerm_subnet.my_terraform_subnet1",
            "azurerm_virtual_network.my_terraform_network1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ddaab660-45e8-4059-b8ca-30e1678cb880/resourceGroups/rg-ace-stallion/providers/Microsoft.Network/networkInterfaces/myNIC|/subscriptions/ddaab660-45e8-4059-b8ca-30e1678cb880/resourceGroups/rg-ace-stallion/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "network_interface_id": "/subscriptions/ddaab660-45e8-4059-b8ca-30e1678cb880/resourceGroups/rg-ace-stallion/providers/Microsoft.Network/networkInterfaces/myNIC",
            "network_security_group_id": "/subscriptions/ddaab660-45e8-4059-b8ca-30e1678cb880/resourceGroups/rg-ace-stallion/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup"
          },
          "dependencies": [
            "azurerm_network_interface.my_terraform_nic",
            "azurerm_network_security_group.my_terraform_nsg",
            "azurerm_public_ip.my_terraform_public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.my_terraform_subnet",
            "azurerm_virtual_network.my_terraform_network",
            "random_pet.rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "example1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ddaab660-45e8-4059-b8ca-30e1678cb880/resourceGroups/rg1_name/providers/Microsoft.Network/networkInterfaces/myNIC1|/subscriptions/ddaab660-45e8-4059-b8ca-30e1678cb880/resourceGroups/rg1_name/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup1",
            "network_interface_id": "/subscriptions/ddaab660-45e8-4059-b8ca-30e1678cb880/resourceGroups/rg1_name/providers/Microsoft.Network/networkInterfaces/myNIC1",
            "network_security_group_id": "/subscriptions/ddaab660-45e8-4059-b8ca-30e1678cb880/resourceGroups/rg1_name/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup1"
          },
          "dependencies": [
            "azurerm_network_interface.my_terraform_nic1",
            "azurerm_network_security_group.my_terraform_nsg1",
            "azurerm_public_ip.my_terraform_public_ip1",
            "azurerm_resource_group.rg1",
            "azurerm_subnet.my_terraform_subnet1",
            "azurerm_virtual_network.my_terraform_network1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "my_terraform_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ddaab660-45e8-4059-b8ca-30e1678cb880/resourceGroups/rg-ace-stallion/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "location": "eastus",
            "name": "myNetworkSecurityGroup",
            "resource_group_name": "rg-ace-stallion",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_pet.rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "my_terraform_nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ddaab660-45e8-4059-b8ca-30e1678cb880/resourceGroups/rg1_name/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup1",
            "location": "eastus",
            "name": "myNetworkSecurityGroup1",
            "resource_group_name": "rg1_name",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH1",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "my_terraform_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/ddaab660-45e8-4059-b8ca-30e1678cb880/resourceGroups/rg-ace-stallion/providers/Microsoft.Network/publicIPAddresses/myPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.231.65.183",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "myPublicIP",
            "resource_group_name": "rg-ace-stallion",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_pet.rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "my_terraform_public_ip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/ddaab660-45e8-4059-b8ca-30e1678cb880/resourceGroups/rg1_name/providers/Microsoft.Network/publicIPAddresses/myPublicIP1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "myPublicIP1",
            "resource_group_name": "rg1_name",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "my_terraform_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ddaab660-45e8-4059-b8ca-30e1678cb880/resourceGroups/rg-ace-stallion/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet",
            "name": "mySubnet",
            "resource_group_name": "rg-ace-stallion",
            "virtual_network_name": "myVnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.my_terraform_network",
            "random_pet.rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "my_terraform_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ddaab660-45e8-4059-b8ca-30e1678cb880/resourceGroups/rg1_name/providers/Microsoft.Network/virtualNetworks/myVnet1/subnets/mySubnet1",
            "name": "mySubnet1",
            "resource_group_name": "rg1_name",
            "virtual_network_name": "myVnet1"
          },
          "dependencies": [
            "azurerm_resource_group.rg1",
            "azurerm_virtual_network.my_terraform_network1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "my_terraform_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7d3d684d-0d78-40d8-a0a3-3c0fd9367088",
            "id": "/subscriptions/ddaab660-45e8-4059-b8ca-30e1678cb880/resourceGroups/rg-ace-stallion/providers/Microsoft.Network/virtualNetworks/myVnet",
            "location": "eastus",
            "name": "myVnet",
            "resource_group_name": "rg-ace-stallion",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/ddaab660-45e8-4059-b8ca-30e1678cb880/resourceGroups/rg-ace-stallion/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet",
                "name": "mySubnet"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_pet.rg_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "my_terraform_network1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "62331c81-dadc-4a12-9441-e9d490c6cbe0",
            "id": "/subscriptions/ddaab660-45e8-4059-b8ca-30e1678cb880/resourceGroups/rg1_name/providers/Microsoft.Network/virtualNetworks/myVnet1",
            "location": "eastus",
            "name": "myVnet1",
            "resource_group_name": "rg1_name",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/ddaab660-45e8-4059-b8ca-30e1678cb880/resourceGroups/rg1_name/providers/Microsoft.Network/virtualNetworks/myVnet1/subnets/mySubnet1",
                "name": "mySubnet1"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg1"
          ]
        }
      ]
    }
  ]
}